--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,12 @@
       "destination": "/index.html"
     }
   ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
